# xsri

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  render-background.c  render-background.h  xsri-2.1.0-17.fc12.src.rpm  xsri.1  xsri.c  xsri.spec  xsri.spec.in
debian/: changelog  control  rules  xsri.manpages
